# agentic-workgraph

./: .gitignore  README.md  agent.md  demo_app.py  pyproject.toml  spec.md
.github/workflows/: ci.yml
docs/: agentic-patterns.md  downstream-integration.md  example-library.md  workflow-authoring.md
examples/: README.md  __init__.py  app.py  workflows.py
src/workgraph/: __init__.py  app.py  cli.py  context.py  core.py  errors.py  models.py  ollama.py  store.py  testing.py  testing_strategies.py  tracing.py
src/workgraph/ui/: app.js  graph.js  index.html  router.js  state.js  styles.css
tests/: test_app.py  test_cli.py  test_core.py  test_examples.py  test_ollama.py  test_property.py  test_store.py  test_testing.py  test_tracing.py  test_ui_smoke.py
tests/snapshots/: demo.graph.json
