[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentic-workgraph"
version = "0.1.0"
description = "Code-first agentic workflow graphs with tracing, execution, and observability hooks."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115",
  "opentelemetry-api>=1.33",
  "opentelemetry-exporter-otlp-proto-grpc>=1.33",
  "opentelemetry-sdk>=1.33",
  "pydantic>=2.7",
  "redis>=5.2",
  "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
  "hypothesis>=6.130",
  "httpx>=0.27",
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
]

[tool.hatch.build.targets.wheel]
packages = ["src/workgraph"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
